async call implemented and ui refactor

--- a/whishlist/whishlist/whishlist.csproj
+++ b/whishlist/whishlist/whishlist.csproj
@@ -130,8 +130,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\PictureHelper.cs" />
+    <Compile Include="Migrations\201505080032576_InitialCreate.cs" />
+    <Compile Include="Migrations\201505080032576_InitialCreate.Designer.cs">
+      <DependentUpon>201505080032576_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserToken.cs" />
     <Compile Include="Models\WhishListContext.cs" />
     <Compile Include="Models\WhishListItem.cs" />
+    <Compile Include="Models\WhishlistVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -140,6 +147,7 @@
     <Content Include="Content\bootstrap\bootstrap.css" />
     <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\images\loading.gif" />
     <Content Include="Content\images\login.png" />
     <Content Include="Content\images\no_image.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -262,6 +270,11 @@
       <Project>{f6163f95-da23-49c6-b58b-cef0cf0b2c83}</Project>
       <Name>SharpSquare</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201505080032576_InitialCreate.resx">
+      <DependentUpon>201505080032576_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
