ui fixes and code refactor

--- a/whishlist/whishlist/Web.config
+++ b/whishlist/whishlist/Web.config
@@ -13,7 +13,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-whishlist-20150507195913;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-whishlist-20150507195913.mdf"/>
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-whishlist-20150507195913;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-whissdfhlist-20150507195913.mdf"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
@@ -24,10 +24,11 @@
     <add key="clientId" value="XOT4KPPMMYIAXABHMTBK51DZWZXEACZHBAEEB5LTPKJNE1SA"/>
     <add key="clientSecret" value="2C2D3POOVVLZNQSU2N5RLRW3XWRS35ELLU1DZ2R5FYPZZPOK"/>
     <add key="venueImgSize" value="256x256"/>
-    <add key="limitOfRecentVenues" value="10"/>
+    <add key="limitOfRecentVenues" value="20"/>
     <add key="callbackurl" value="http://localhost:3000/foursquare/callback"/>
     <add key="loginPrefix" value="https://foursquare.com/oauth2/authenticate?client_id="/>
     <add key="loginSuffix" value="&amp;response_type=code&amp;redirect_uri=http://localhost:3000/foursquare/callback"/>
+    <add key="noImagePath" value="/content/images/no_image.png"/>
   </appSettings>
   <system.web>
       
@@ -62,7 +63,7 @@
     </roleManager>
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider" timeout="3000" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
+        <add name="DefaultSessionProvider" timeout="300000" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
   </system.web>
